--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 -->
 
-<%= form_for @user,  url: {action: "create"} do |f| %>
+<%= form_for @user do |f| %>
     <%= f.label :username, "Username:" %>
     <%= f.text_field :username, value: "user_unknown" %>
     <%= f.label :email, "E-mail:" %>
