add partial and error messages

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,3 +10,12 @@
 .field_with_errors input {
     border: 1px solid red;
 }
+
+.errors {
+    border: 1px solid red;
+    border-radius: 10px;
+}
+
+input, label {
+    display: block;
+}
