--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,13 +24,5 @@
 <% end %>
 -->
 
-<%= form_for @user do |f| %>
-    <%= f.label :username, "Username:" %>
-    <%= f.text_field :username, value: "user_unknown" %>
-    <%= f.label :email, "E-mail:" %>
-    <%= f.text_field :email , placeholder: "example@example.com"%>
-    <%= f.label :password, "Password:" %>
-    <%= f.password_field :password %>
-    <%= f.submit "Submit" %>
-<% end %>
+<%= render partial: 'form' %>
 
